--- a/backend/package.json
+++ b/backend/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "keywords": [],
+  "keywords": [
+    "example",
+    "heroku"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -16,5 +20,8 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
     "mongoose-auto-increment": "^5.0.1"
+  },
+  "engines": {
+    "node": "14.18.0"
   }
 }
